// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div>
  <div
    class="sc-beySPh eUcAOb"
  >
    <label
      aria-label="label"
      class="sc-dmyCSP ducgyw undefined-label"
      stile="default"
    >
      <input
        class="sc-guDLey hJeQqt undefined-input"
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders on disabled 1`] = `
<div>
  <div
    class="sc-beySPh EuxbD"
    disabled=""
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP bsRVNR undefined-label"
      disabled=""
      stile="default"
    >
      <h3
        class="sc-eDLKkx fLXAhb undefined-heading"
        disabled=""
        stile="default"
      >
        Input
      </h3>
      <input
        class="sc-guDLey hJeQqt undefined-input"
        disabled=""
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 1`] = `
<div>
  <div
    class="sc-beySPh eUcAOb"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP eBqJxY undefined-label"
      stile="mute"
    >
      <h3
        class="sc-eDLKkx hPtwjE undefined-heading"
        stile="mute"
      >
        Input
      </h3>
      <input
        class="sc-guDLey jofGtu undefined-input"
        stile="mute"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 2`] = `
<div>
  <div
    class="sc-beySPh eUcAOb"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP ducgyw undefined-label"
      stile="default"
    >
      <h3
        class="sc-eDLKkx fLXAhb undefined-heading"
        stile="default"
      >
        Input
      </h3>
      <input
        class="sc-guDLey hJeQqt undefined-input"
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 3`] = `
<div>
  <div
    class="sc-beySPh eUcAOb"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP ducgyw label undefined-label"
      stile="primary"
    >
      <h3
        class="sc-eDLKkx fLXAhb heading undefined-heading"
        stile="primary"
      >
        Input
      </h3>
      <input
        class="sc-guDLey hJeQqt input undefined-input"
        stile="primary"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with error 1`] = `
<div>
  <div
    class="sc-beySPh eUcAOb"
    error="true"
  >
    <label
      aria-label="label"
      class="sc-dmyCSP ducgyw undefined-label"
      error="true"
      stile="default"
    >
      <input
        class="sc-guDLey hJeQqt error undefined-input"
        error="true"
        stile="default"
      />
    </label>
    <span
      class="sc-hLQSwg krvncp undefined-error-message"
    >
      error
    </span>
  </div>
</div>
`;
